# aoc_solutions_app

./: README.md  pyproject.toml
app/: api.py  settings.py  urls.py
y2022/: api.py  apps.py  models.py  service.py
