[tool.poetry]
name = "solutions-app"
version = "0.1.0"
description = ""
authors = ["Eugene Serkin <jeserkin@gmail.com>"]
readme = "README.md"
packages = [{include = "solutions_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
django-ninja = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
